--- a/board.html
+++ b/board.html
@@ -9,11 +9,11 @@
    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 </head>
   <body>
+    <div id="new-label">
+      <input type="button" value="Create New Label!">
+    </div>
     <div id="sample">
       <div id="new" class="status">
-        <div class="label"><p>One Content</p></div>
-        <div class="label"><p>Two: And on other</p></div>
-        <div class="label"><p>Three</p></div>
       </div>
 
       <div id="inp" class="status">
