--- a/board.html
+++ b/board.html
@@ -13,7 +13,7 @@
       <input type="button" value="Create New Label!">
     </div>
     <div id="sample">
-      <div id="new" class="status">
+      <div id="new_a" class="status">
       </div>
 
       <div id="inp" class="status">
@@ -28,7 +28,8 @@
       <div id="other" class="status">
       </div>
     </div>
-
+    
+    <script src="db-object-obsolate.js"></script>
     <script src="storage.js"></script>
     <script src="board.js"></script>
   </body>
