save board in objects

--- a/board.html
+++ b/board.html
@@ -13,7 +13,7 @@
       <input type="button" value="Create New Label!">
     </div>
     <div id="sample">
-      <div id="new_a" class="status">
+      <div id="new" class="status">
       </div>
 
       <div id="inp" class="status">
