--- a/board.html
+++ b/board.html
@@ -29,8 +29,7 @@
       </div>
     </div>
     
-    <script src="db-object-obsolate.js"></script>
-    <script src="storage.js"></script>
+    <script src="local-storage.js"></script>
     <script src="board.js"></script>
   </body>
 </html>
