--- a/board.html
+++ b/board.html
@@ -5,8 +5,10 @@
   <meta charset="utf-8">
   <title>TODO</title>
    <link rel="stylesheet" href="board.css">  
+   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+   <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
 </head>
   <body>
     <div id="new-label">
@@ -29,7 +31,8 @@
       </div>
     </div>
     
-    <script src="local-storage.js"></script>
+    <script src="local-board-storage.js"></script>
+    <script src="board-storage-proxy.js"></script>
     <script src="board.js"></script>
   </body>
 </html>
