--- a/board.html
+++ b/board.html
@@ -8,11 +8,11 @@
    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-   <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
+   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
   <body>
-    <div id="new-label">
-      <input type="button" value="Create New Label!">
+    <div id="header">
+      <input type="button" value="Create New Label!" class="btn btn-primary" id="new-label">
     </div>
     <div id="sample">
       <div id="new" class="status">
@@ -33,6 +33,6 @@
     
     <script src="local-board-storage.js"></script>
     <script src="board-storage-proxy.js"></script>
-    <script src="board.js"></script>
+    <script src="board-event-handler.js"></script>
   </body>
 </html>
